# pygpe

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: poetry-publish.yml  poetry-test.yml
docs/: pypi.md
docs/source/: Makefile  conf.py  index.rst  make.bat
docs/source/_static/: pygpe.css
docs/source/reference/: datamanager.rst  datamanager.scalar.rst  datamanager.spinhalf.rst  datamanager.spinone.rst  datamanager.spintwo.rst  evolution.rst  evolution.scalar.rst  evolution.spinhalf.rst  evolution.spinone.rst  evolution.spintwo.rst  grid.rst  index.rst  parameters.rst  vortices.rst  wavefunction.rst  wavefunction.scalar.rst  wavefunction.spinhalf.rst  wavefunction.spinone.rst  wavefunction.spintwo.rst
docs/source/user/: evolution.rst  starter_guide.rst  wavefunction.scalar.rst  wavefunction.spinone.rst  wavefunction.spintwo.rst
examples/: spin1_2d_SQV_imprinting.py
examples/scalar/: 2d_SQV_imprinting.py  2d_decay.py
examples/spinone/: 2d_SQV_imprinting.py
pygpe/: grid.py
pygpe/scalar/: __init__.py  data_manager.py  evolution.py  wavefunction.py
pygpe/shared/: __init__.py  data_manager.py  data_manager_paths.py  grid.py  utils.py  vortices.py  wavefunction.py
pygpe/spin_1/: data_manager.py  evolution.py  parameters.py  phase.py  wavefunction.py
pygpe/spinhalf/: data_manager.py  evolution.py  wavefunction.py
pygpe/spinone/: __init__.py  data_manager.py  evolution.py  wavefunction.py
pygpe/spintwo/: __init__.py  data_manager.py  evolution.py  wavefunction.py
tests/: test_grids.py  test_wavefunction_spin1.py
tests/scalar/: test_data_manager.py  test_scalar_wavefunction.py  test_wavefunction.py
tests/shared/: test_grids.py
tests/spin_1/: test_evolution.py  test_wavefunction_spin1.py
tests/spinhalf/: test_spinhalf_data_manager.py  test_spinhalf_wavefunction.py
tests/spinone/: test_evolution.py  test_spinone_data_manager.py  test_spinone_evolution.py  test_spinone_wavefunction.py  test_wavefunction_spin1.py
tests/spintwo/: test_spintwo_data_manager.py  test_spintwo_wavefunction.py  test_wavefunction.py
