[tool.poetry]
name = "pygpe"
version = "1.2.2"
description = "A fast Gross-Pitaevskii equation solver for scalar, spin-1 and spin-2 BEC systems."
authors = ["Matt Wheeler <wheelermt@proton.me>"]
license = "MIT"
readme = "README.md"
documentation = "https://wheelermt.github.io/pygpe-docs/"
homepage = "https://github.com/wheelerMT/pygpe"
keywords = ["Gross-Pitaevskii", "Bose-Einstein", "scientific computing", "numerical methods"]

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.10.0"
numpy = "^1.26.3"

[tool.poetry.extras]
gpu = ["cupy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
